# grt-testing

./: .gitignore  Makefile  README.md  fig6-parallel-grt-eval.sh  grt-eval-multi.sh  grt-eval-setup.sh  grt-eval.sh  pyproject.toml
.github/workflows/: commons-cli.yml  make.yml
defects4j-jars/: BUILD_MATRIX.md  buildjars.sh
scripts/: ClassViewer-5.0.5b.sh  Makefile  MethodExtractor.java  REPROINSTRUCTIONS.md  a4j-1.0b.sh  apply-build-patch-evosuite.sh  apply-build-patch-randoop.sh  apply-build-patch.sh  build-evosuite.xml  build.xml  clean-dir.sh  clean-script-dir.sh  commons-cli-1.2.sh  compile-project.sh  convert_test_runners.py  dcParseArgs-10.2008.sh  defect-evosuite.sh  defect-prerequisites.md  defect-randoop.sh  defects4j-evosuite.sh  defects4j-prerequisites.md  defects4j-randoop.sh  defs.sh  diff-patch.sh  generate-figures.py  generate-mvn-dependencies.sh  get-all-subject-src.sh  jcommander-1.35.sh  jvc-1.1.sh  mutation-all-fig.sh  mutation-all-randoop.sh  mutation-all.sh  mutation-evosuite-repro.md  mutation-evosuite.sh  mutation-fig6-parallel.sh  mutation-fig6-unit.sh  mutation-fig7-parallel.sh  mutation-fig7-unit.sh  mutation-fig8to10-parallel.sh  mutation-parallel.sh  (+20 more)
scripts/build-variants/: build-evosuite.xml  build.xml
scripts/experiment-scripts/: README.md  common.sh  defect-table4.sh  defects4j-table4.sh  generate-figures.py  mutation-fig7.sh  (+4 more)
subject-programs/: README  README.build  build-info.yaml  buildall.py  buildall.sh  get-all-subject-src.sh  get-grt-source.sh  get-upstream-source.py  update-all-subject-src.sh
tests/: README  README.build
(+182 files in other folders)
