[project]
name = "grt-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pymarkdownlnt>=0.9.33",
    "ty>=0.0.1a31",
]
